cleaning up local server and vendoring

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "open": "concurrently 'node src/index.js' 'open http://localhost:3000'"
+    "open": "concurrently 'http-server' 'open http://localhost:8080/src'"
   },
   "author": "Marcin Kuzdowicz",
   "license": "ISC",
