--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "open": "concurrently 'watch-http-server' 'open http://localhost:8080/src'"
+    "start": "NODE_ENV=development parcel src/index.html --no-hmr --port 8080"
   },
   "author": "Marcin Kuzdowicz",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.7.0"
+    "@tensorflow/tfjs": "^3.7.0",
+    "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
     "concurrently": "^6.2.0"
