Plugin tfjs by setting up parcel bundler (#6)
* README update

* improving vendoring

* add build command

* build command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development parcel src/index.html --no-hmr --port 8080"
+    "start": "parcel src/index.html",
+    "build": "rm -rf build && parcel build src/index.html -d build"
   },
   "author": "Marcin Kuzdowicz",
   "license": "ISC",
