--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nasit-demo",
+  "name": "neck-interactive-trainer-demo",
   "version": "1.0.0",
-  "description": "neck and sholders interactive trainer",
+  "description": "neck interactive trainer DEMO",
   "main": "src/index.js",
   "engines": {
     "node": ">=14.17.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "parcel src/index.html",
     "build": "rm -rf build && parcel build src/index.html -d build"
   },
@@ -23,6 +23,9 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
-    "concurrently": "^6.2.0"
+    "@babel/core": "^7.14.6",
+    "babel-jest": "^27.0.5",
+    "jest": "^27.0.5",
+    "ts-jest": "^27.0.3"
   }
 }
